--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nko2015-entry",
+  "name": "name",
   "version": "0.0.1",
-  "description": "Our soon to be awesome entry for NKO2015. Let's make something amazing.",
-  "author": "Node Knockout Team <all@nodeknockout.com>",
+  "description": "A Scheduling app that can help you get more things done",
+  "author": "Mohanarangan Muthukumar <mohan@extrasalt.org>",
   "main": "./app.js",
   "dependencies": {
     "express": "3.x.x"
