--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "dependencies": {
     "express": "4.x.x",
     "googleapis": "*",
-    "mongoose": "*"
+    "mongoose": "*",
+    "cookie-parser": "*",
+    "body-parser": "*",
+    "express-session":"*"
   },
   "scripts": {
     "start": "node app.js",
