--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "body-parser": "*",
     "cookie-parser": "*",
+    "cookie-session": "^1.2.0",
     "ejs": "^2.3.4",
     "express": "4.x.x",
     "express-session": "*",
